[gd_scene load_steps=10 format=3 uid="uid://jp4x3nww16ck"]

[ext_resource type="Script" uid="uid://ddhwumwo4l3tp" path="res://scripts/menu/config/options.gd" id="1_ib07x"]
[ext_resource type="Texture2D" uid="uid://dxmyc4yt33l3b" path="res://assets/Background_Menu/meme-sheldon-cooper_.png" id="2_ffnc0"]
[ext_resource type="AudioStream" uid="uid://b27y8uwjrvonh" path="res://assets/audio/sfx/menu/button_click.ogg" id="3_dvmy2"]
[ext_resource type="PackedScene" uid="uid://bgbswtjolbw28" path="res://scenes/menu/config/h_slider.tscn" id="3_ffnc0"]
[ext_resource type="AudioStream" uid="uid://yinuh86st0n" path="res://assets/audio/sfx/menu/mouse_entered.ogg" id="4_1exik"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6cm7"]

[sub_resource type="Animation" id="Animation_bqqt6"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2000, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ekxnf"]
resource_name = "reveal"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.004, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.288568, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1000, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu84c"]
_data = {
&"RESET": SubResource("Animation_bqqt6"),
&"reveal": SubResource("Animation_ekxnf")
}

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ib07x")

[node name="background" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = -19.9999
offset_right = 1300.0
offset_bottom = 720.0
texture = ExtResource("2_ffnc0")
expand_mode = 2
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2000.0
offset_right = -2000.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.99)
theme_override_constants/margin_left = -20
theme_override_constants/margin_right = -20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="game_logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="master" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Master"
horizontal_alignment = 1

[node name="master_volume2" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_ffnc0")]
layout_mode = 2
bus_name = "Master"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="Music" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Musica"
horizontal_alignment = 1

[node name="Music_volume" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_ffnc0")]
layout_mode = 2
bus_name = "music"

[node name="SFX" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SFX"
horizontal_alignment = 1

[node name="sfx_volume3" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_ffnc0")]
layout_mode = 2
bus_name = "sfx"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="Resolution" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 70
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Voltar"

[node name="Animação" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wu84c")
}
autoplay = "reveal"

[node name="buttonclick" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource("3_dvmy2")
volume_db = -20.0
bus = &"sfx"

[node name="mouse_entered" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1exik")
volume_db = -20.0
bus = &"sfx"

[node name="Musica" type="CheckButton" parent="."]
visible = false
layout_mode = 0
offset_left = 910.0
offset_top = 477.0
offset_right = 1061.0
offset_bottom = 508.0
scale = Vector2(2.425, 2.425)
button_pressed = true
text = "Musica Menu"

[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Musica" to="." method="_on_musica_toggled"]
